# ProtocolDefinitions

./: .docker_cross_imx_config  .editorconfig  .gitignore  .protolint.yaml  Blueye.Protocol.Protobuf.csproj  Blueye.Protocol.Protobuf.sln  CLAUDE.md  CMakeLists.txt  README.md  README.npm.md  makefile  markdown.tmpl  package.json  pnpm-lock.yaml  protoc-gen-doc.sh  protolint.sh  tcp_protocol.json  tsconfig.json  udp_protocol.json
.github/workflows/: ci-build.yaml  ci-dotnet.yaml  ci-python.yaml  ci-typescript.yaml  cross-imx-update  gen-docs.yaml
cmake/: blueyeprotocolConfig.cmake.in
protobuf_definitions/: aquatroll.proto  cameraControl.proto  camera_control.proto  common.proto  control.proto  droneControl.proto  drone_control.proto  message_formats.proto  mission_planning.proto  overlayControl.proto  overlay_control.proto  req_rep.proto  telemetry.proto
python_build/: README.md  pyproject.toml
python_build/blueye/: __init__.py
