[tool.poetry]
name = "blueye.protocol"
version = "3.0.0"
description = "Protobuf-based protocol definitions for the Blueye drones"
authors = ["Sindre Hansen <sindre.hansen@blueye.no>"]
license = "LGPL-3.0"
include = ["blueye/protocol/*",
           "blueye/protocol/types/*",
           "blueye/protocol/services/*"
]
packages = [
  { include = "blueye" },
]
readme = "README.md"
repository="https://github.com/blueye-robotics/ProtocolDefinitions"
homepage ="https://www.blueyerobotics.com"
keywords = ["Blueye", "Robotics", "Protocol"]

[tool.poetry.dependencies]
python = "^3.7"
proto-plus = "^1.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
